sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:3: error: value chg is not a member of object Boolean
  Boolean chg = true;
          ^AlgCocktailSort1:4: error: not found: value chg
  while(chg){
        ^AlgCocktailSort1:5: error: not found: value chg
    chg=false;
    ^AlgCocktailSort1:10: error: not found: value chg
          chg=true;
          ^AlgCocktailSort1:17: error: not found: value chg
        chg=true;
        ^