sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  Boolean chg = true;
  while(chg){
    chg=false;
    var i = 0;
    for(i <- 0 to getNombreValeurs()-2){
      if(plusPetit(i+1,i)){
        echange(i+1,i);
          chg=true;
      }
    }
    var j = 0;
    for(j <- 0 to getNombreValeurs()-2 by -1){
      if(plusPetit(j+1,j)){
        echange(j+1,j);
        chg=true;
      }
    }
  }
}
